# mint

./: .biomeignore  .gitignore  AGENTS.md  README.md  biome.json  index.html  package-lock.json  package.json  pr18-backend-diagnostic.txt  vite.config.ts  vitest.config.ts
.agents/: AGENTS.md
.agents/prompts/: repair_after_review.md  review_architecture_drift.md  review_feature_change.md
.agents/skills/add-overlay-window/: SKILL.md
.agents/skills/add-tauri-command/: SKILL.md
.agents/skills/add_overlay_window/: SKILL.md
.agents/skills/add_tauri_command/: SKILL.md
.agents/skills/audit-feature/: SKILL.md
.agents/skills/audit_feature/: SKILL.md
.agents/skills/change-mint-ui/: SKILL.md
.agents/skills/create-static-feature/: SKILL.md
.agents/skills/create_static_feature/: SKILL.md
.agents/skills/repair-after-review/: SKILL.md
.agents/skills/repair_after_review/: SKILL.md
.agents/skills/update-settings-schema/: SKILL.md
.agents/skills/update_settings_schema/: SKILL.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr18-autofix.yml  pr18-backend-diagnostic.yml  pr18-import-autofix.yml  release.yml
docs/: ai-development.md  ai-foundation-audit.md  ai-quality-rubric.md  architecture.md  design-architecture.md  manual-verification.md  updater.md
docs/adr/: 001-static-feature-module.md
scripts/: ai-context.js  bump-version.js  capture-screenshots.js  check-ai-context.js  check-ai-foundation.js  check-release-version.js  check-scripts.js  playwright-fontconfig.conf  scaffold-feature.js  test-scaffold.js  verify-architecture.js
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: mod.rs  settings.rs  settings_api_keys.rs  settings_model.rs  settings_store.rs  tray.rs  window.rs
src-tauri/src/features/: calendar.rs  clock.rs  game_launcher.rs  google_calendar.rs  mod.rs  v2t.rs
src-tauri/src/features/calendar/: database.rs  mod.rs  repository.rs  tests.rs  validation.rs  window.rs
src-tauri/src/features/file_shelf/: clipboard.rs  implementation.rs  mod.rs  models.rs  repository.rs  repository_tests.rs  shortcut.rs  window.rs
src-tauri/src/features/game_launcher/: debounce.rs  launch.rs  mod.rs  scan.rs  tests.rs  window.rs
src-tauri/src/features/google_calendar/: auth.rs  mod.rs  sync.rs  tests.rs
src-tauri/src/features/quick_capture/: attachments.rs  backup.rs  implementation.rs  mod.rs  models.rs  repository.rs  repository_tests.rs  window.rs
src/core/: defaultSettings.test.ts  defaultSettings.ts  settings.ts  settingsModel.ts  shortcuts.ts  windowCommands.test.ts  windowCommands.ts  windowRoutes.ts  windowThemeStyles.test.ts
src/core/components/: AppErrorState.tsx  AppFeedback.css  AppLoading.test.tsx  AppLoading.tsx  ErrorToast.css  (+6 more)
src/design/: clock.css  feedback.css  settings.css  theme.css  tokens.css  workspaces.css
src/testing/: node-fs.d.ts
(+256 files in other folders)
