[package]
name = "mint"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"
keyring = { version = "3", features = ["sync-secret-service"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "multipart", "rustls", "form", "query"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tauri-plugin-autostart = "2.5.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
image = { version = "0.25.10", default-features = false, features = ["png"] }
url = "2"
steamlocate = "2.1"
zip = { version = "4", default-features = false, features = ["deflate"] }
tauri-plugin-drag = "2.1.1"
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
systemicons = "0.9.13"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm"] }
